// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@elementor/generate-wordpress-asset-file-webpack-plugin should generate assets files: app.asset.php 1`] = `
"<?php
if ( ! defined( 'ABSPATH' ) ) {
	exit;
}
/**
 * This file is generated by Webpack, do not edit it directly.
 */
return [
	'handle' => 'elementor-v2-app',
	'deps' => [
		'elementor-v2-editor',
		'react',
		'react-dom',
		'wp-element',
	],
];
"
`;

exports[`@elementor/generate-wordpress-asset-file-webpack-plugin should generate assets files: extension.asset.php 1`] = `
"<?php
if ( ! defined( 'ABSPATH' ) ) {
	exit;
}
/**
 * This file is generated by Webpack, do not edit it directly.
 */
return [
	'handle' => 'elementor-v2-extension',
	'deps' => [
		'elementor-v2-editor',
		'react',
		'react-dom',
		'wp-element',
	],
];
"
`;

exports[`@elementor/generate-wordpress-asset-file-webpack-plugin should generate assets files: util.asset.php 1`] = `
"<?php
if ( ! defined( 'ABSPATH' ) ) {
	exit;
}
/**
 * This file is generated by Webpack, do not edit it directly.
 */
return [
	'handle' => 'elementor-v2-util',
	'deps' => [
		'elementor-v2-editor',
		'react',
		'react-dom',
		'wp-element',
	],
];
"
`;
